[package]
name = "bitoxide"
version = "0.1.0"
author = "F5XS"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
dynamic_ram_bypass = []

[profile.release]
debug = true

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[package.metadata.cargo-post.dependencies]
base64 = "0.21"
cfg-if = "1.0"
serde_json = "1.0"
toml = "0.7"
tungstenite = "0.19"
